{{$NEXT}}

0.000020  2020-12-01 15:35:36-08:00 America/Los_Angeles

    - Watcher should use POSIX::_exit() since it is exec-like
    - Minimum mysqld version 5.6.0

0.000019  2020-11-30 15:40:36-08:00 America/Los_Angeles

    - Add watcher process to make sure cleanup happens

0.000018  2020-11-20 08:46:39-08:00 America/Los_Angeles

    - Fix bug where driver could be forgotten in pool during reclaim

0.000017  2020-11-16 08:26:03-08:00 America/Los_Angeles

    - Support for older percona mysqld's that need mysql_install_db run

0.000016  2020-11-13 11:28:35-08:00 America/Los_Angeles

    - Support older version of percona
    - Minor test fixes

0.000015  2020-08-14 20:45:04-07:00 America/Los_Angeles

    - Make it possible to clear old cache
    - Do not leave garbage in /tmp from tests

0.000014  2020-07-30 22:36:47-07:00 America/Los_Angeles

    - Fix some Postgres 'starting up' issues
    - Support for percona in MySQL
    - Support for either DBD::MariaDB or DBD::mysql

0.000013  2020-07-28 21:17:30-07:00 America/Los_Angeles

    - Add module to deps

0.000012  2020-07-28 15:33:51-07:00 America/Los_Angeles

    - Add ability to clone without cp or rsync
    - Fix minimum perl version

0.000011  2020-07-27 23:07:33-07:00 America/Los_Angeles

    - Add ability to clone databases
    - Add Database pools
    - Make databases better at stopping (close connections)
    - Fix some test timeout issues under yath due to ^
    - Update copyright date

0.000010  2019-06-08 13:03:48-07:00 America/Los_Angeles

    - More work for issue #1

0.000009  2019-05-29 21:49:45-07:00 America/Los_Angeles

    - Work for issue #1

0.000008  2019-04-28 08:41:10-07:00 America/Los_Angeles

    - Make PostgresQL use UTF8

0.000007  2018-01-29 14:23:53-08:00 America/Los_Angeles

    - Make SQLite work without the sqlite3 binary

0.000006  2018-01-29 12:59:54-08:00 America/Los_Angeles

    - Fix for postgres with alternate hardcoded port numbers
